--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "svg-sprite-loader": "^0.2.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
     "webpack-merge": "^2.6.1"
