add deployer to github page

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npm run clean:dist; ./node_modules/.bin/webpack --env production",
     "clean:dist": "rm -rf ./dist/*",
+    "deploy": "./node_modules/.bin/gh-pages -d ./dist/",
     "start": "./node_modules/.bin/nodemon --watch webpack.config.js --exec \"./node_modules/.bin/webpack-dev-server --env development\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,6 +30,7 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
+    "gh-pages": "^0.12.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
